Add tests for SunburstChartViewModel